--- a/manifest.yml
+++ b/manifest.yml
@@ -1,14 +1,14 @@
-image: yen3/docker-ubuntu-novnc:latest
+image: yen3/ubuntu-novnc:latest
 manifests:
-  - image: yen3/docker-ubuntu-novnc:amd64
+  - image: yen3/ubuntu-novnc:amd64
     platform:
       architecture: amd64
       os: linux
-  - image: yen3/docker-ubuntu-novnc:arm64
+  - image: yen3/ubuntu-novnc:arm64
     platform:
       architecture: arm64
       os: linux
-  - image: yen3/docker-ubuntu-novnc:arm32v7
+  - image: yen3/ubuntu-novnc:arm32v7
     platform:
       architecture: arm
       os: linux
