Specifc the arm arch version

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,7 +8,9 @@ manifests:
     platform:
       architecture: arm64
       os: linux
+      variant: v8
   - image: yen3/ubuntu-novnc:arm32v7
     platform:
       architecture: arm
       os: linux
+      variant: v7
